Blender crashes when I try to open a .blend file #59365

Closed
opened 2018-12-14 14:04:16 +01:00 by Ali · 6 comments

System Information
Operating system: macOS Mojave
Graphics card: NVIDIA GeForce GT 750M

Blender Version
Broken: 2.80, aca13040da, blender2.8, 2018-12-13 23:34, as found on the splash screen

I am doing a CG Cookie tutorial and when I try to open this file column.blend they gave me, Blender 2.8 crashes

As far as I am aware the file contains the objects and modifiers in the screenshot below

Screenshot 2018-12-14 at 13.02.30.png

System Information Operating system: macOS Mojave Graphics card: NVIDIA GeForce GT 750M Blender Version Broken: 2.80, aca13040dac, blender2.8, 2018-12-13 23:34, as found on the splash screen I am doing a CG Cookie tutorial and when I try to open this file [column.blend](https://archive.blender.org/developer/F5952273/column.blend) they gave me, Blender 2.8 crashes As far as I am aware the file contains the objects and modifiers in the screenshot below ![Screenshot 2018-12-14 at 13.02.30.png](https://archive.blender.org/developer/F5952305/Screenshot_2018-12-14_at_13.02.30.png)
Author

Added subscriber: @Ali6

Added subscriber: @Ali6

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Campbell Barton was assigned by Sebastian Parborg 2018-12-14 14:28:07 +01:00

I also get the crash in 2.8 (2.79 is fine). Backtrace:

Thread 26 "blender" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffdaffc700 (LWP 5575)]
0x0000555557fc2eec in BKE_object_defgroup_index_map_apply (dvert=0x5820, dvert_len=454, map=0x7fffd780ef58, map_len=1)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/object_deform.c:510
510			int totweight = dv->totweight;
(gdb) bt
#0  0x0000555557fc2eec in BKE_object_defgroup_index_map_apply (dvert=0x5820, dvert_len=454, map=0x7fffd780ef58, map_len=1)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/object_deform.c:510
#1  0x000055555794f1ea in mesh_merge_transform (result=0x7fffd782e908, cap_mesh=0x7fffd782db08, cap_offset=0x7fffdaffb570, cap_verts_index=1410, 
    cap_edges_index=2105, cap_loops_index=2800, cap_polys_index=700, cap_nverts=454, cap_nedges=904, cap_nloops=1808, cap_npolys=452, remap=0x7fffd780ef58, 
    remap_len=1) at /home/zed/programmering/blender_master/blender/source/blender/modifiers/intern/MOD_array.c:300
#2  0x0000555557950950 in arrayModifier_doArray (amd=0x7fffeae63e48, ctx=0x7fffdaffb760, mesh=0x7fffd7830c08)
    at /home/zed/programmering/blender_master/blender/source/blender/modifiers/intern/MOD_array.c:659
#3  0x0000555557950d3f in applyModifier (md=0x7fffeae63e48, ctx=0x7fffdaffb760, mesh=0x7fffd7830c08)
    at /home/zed/programmering/blender_master/blender/source/blender/modifiers/intern/MOD_array.c:761
#4  0x0000555557f88ff5 in modwrap_applyModifier (md=0x7fffeae63e48, ctx=0x7fffdaffb760, me=0x7fffd7830c08)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/modifier.c:839
#5  0x0000555557e21231 in mesh_calc_modifiers (depsgraph=0x7fffeaee2008, scene=0x7fffddd86008, ob=0x7fffeffea608, inputVertexCos=0x0, useDeform=1, 
    need_mapping=false, dataMask=637534729, index=-1, useCache=true, build_shapekey_layers=false, r_deform=0x7fffeffeab80, r_final=0x7fffeffeab78)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:1454
#6  0x0000555557e239a0 in mesh_build_data (depsgraph=0x7fffeaee2008, scene=0x7fffddd86008, ob=0x7fffeffea608, dataMask=637534729, 
    build_shapekey_layers=false, need_mapping=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:2044
#7  0x0000555557e23d58 in makeDerivedMesh (depsgraph=0x7fffeaee2008, scene=0x7fffddd86008, ob=0x7fffeffea608, em=0x0, dataMask=637534729, 
    build_shapekey_layers=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:2156
#8  0x0000555557fc7fb2 in BKE_object_handle_data_update (depsgraph=0x7fffeaee2008, scene=0x7fffddd86008, ob=0x7fffeffea608)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/object_update.c:197
#9  0x0000555557fc88c2 in BKE_object_eval_uber_data (depsgraph=0x7fffeaee2008, scene=0x7fffddd86008, ob=0x7fffeffea608)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/object_update.c:369
#10 0x000055555840a602 in std::__invoke_impl<void, void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*, Scene*&, Object*&> (__f=
    @0x7fffd2f73ec0: 0x555557fc8812 <BKE_object_eval_uber_data>, __args#0=@0x7fffdaffbd10: 0x7fffeaee2008, __args#1=@0x7fffd2f73ed0: 0x7fffddd86008, 
    __args#2=@0x7fffd2f73ec8: 0x7fffeffea608) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:60
#11 0x00005555584090fb in std::__invoke<void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*, Scene*&, Object*&> (__fn=
    @0x7fffd2f73ec0: 0x555557fc8812 <BKE_object_eval_uber_data>, __args#0=@0x7fffdaffbd10: 0x7fffeaee2008, __args#1=@0x7fffd2f73ed0: 0x7fffddd86008, 
    __args#2=@0x7fffd2f73ec8: 0x7fffeffea608) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:95
#12 0x00005555584079bd in std::_Bind<void (*(std::_Placeholder<1>, Scene*, Object*))(Depsgraph*, Scene*, Object*)>::__call<void, Depsgraph*&&, 0ul, 1ul, 2ul>(std::tuple<Depsgraph*&&>&&, std::_Index_tuple<0ul, 1ul, 2ul>) (this=0x7fffd2f73ec0, __args=...)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:400
#13 0x0000555558405916 in std::_Bind<void (*(std::_Placeholder<1>, Scene*, Object*))(Depsgraph*, Scene*, Object*)>::operator()<Depsgraph*, void>(Depsgraph*&&)
    (this=0x7fffd2f73ec0, __args#0=@0x7fffdaffbd10: 0x7fffeaee2008) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:484
#14 0x0000555558402868 in std::_Function_handler<void (Depsgraph*), std::_Bind<void (*(std::_Placeholder<1>, Scene*, Object*))(Depsgraph*, Scene*, Object*)> >::_M_invoke(std::_Any_data const&, Depsgraph*&&) (__functor=..., __args#0=@0x7fffdaffbd10: 0x7fffeaee2008)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:297
#15 0x000055555841c6d3 in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (this=0x7fffd53b7948, __args#0=0x7fffeaee2008)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:687
#16 0x000055555841bcb4 in DEG::deg_task_run_func (pool=0x7fffd36a5008, taskdata=0x7fffd53b78e8, thread_id=4)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:95
#17 0x00005555583d989d in task_scheduler_thread_run (thread_p=0x7fffdddbb0c8)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:442
- 18 0x00007ffff63753c3 in start_thread () from /lib64/libpthread.so.0
- 19 0x00007ffff48ce36f in clone () from /lib64/libc.so.6
I also get the crash in 2.8 (2.79 is fine). Backtrace: ``` Thread 26 "blender" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffdaffc700 (LWP 5575)] 0x0000555557fc2eec in BKE_object_defgroup_index_map_apply (dvert=0x5820, dvert_len=454, map=0x7fffd780ef58, map_len=1) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/object_deform.c:510 510 int totweight = dv->totweight; (gdb) bt #0 0x0000555557fc2eec in BKE_object_defgroup_index_map_apply (dvert=0x5820, dvert_len=454, map=0x7fffd780ef58, map_len=1) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/object_deform.c:510 #1 0x000055555794f1ea in mesh_merge_transform (result=0x7fffd782e908, cap_mesh=0x7fffd782db08, cap_offset=0x7fffdaffb570, cap_verts_index=1410, cap_edges_index=2105, cap_loops_index=2800, cap_polys_index=700, cap_nverts=454, cap_nedges=904, cap_nloops=1808, cap_npolys=452, remap=0x7fffd780ef58, remap_len=1) at /home/zed/programmering/blender_master/blender/source/blender/modifiers/intern/MOD_array.c:300 #2 0x0000555557950950 in arrayModifier_doArray (amd=0x7fffeae63e48, ctx=0x7fffdaffb760, mesh=0x7fffd7830c08) at /home/zed/programmering/blender_master/blender/source/blender/modifiers/intern/MOD_array.c:659 #3 0x0000555557950d3f in applyModifier (md=0x7fffeae63e48, ctx=0x7fffdaffb760, mesh=0x7fffd7830c08) at /home/zed/programmering/blender_master/blender/source/blender/modifiers/intern/MOD_array.c:761 #4 0x0000555557f88ff5 in modwrap_applyModifier (md=0x7fffeae63e48, ctx=0x7fffdaffb760, me=0x7fffd7830c08) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/modifier.c:839 #5 0x0000555557e21231 in mesh_calc_modifiers (depsgraph=0x7fffeaee2008, scene=0x7fffddd86008, ob=0x7fffeffea608, inputVertexCos=0x0, useDeform=1, need_mapping=false, dataMask=637534729, index=-1, useCache=true, build_shapekey_layers=false, r_deform=0x7fffeffeab80, r_final=0x7fffeffeab78) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:1454 #6 0x0000555557e239a0 in mesh_build_data (depsgraph=0x7fffeaee2008, scene=0x7fffddd86008, ob=0x7fffeffea608, dataMask=637534729, build_shapekey_layers=false, need_mapping=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:2044 #7 0x0000555557e23d58 in makeDerivedMesh (depsgraph=0x7fffeaee2008, scene=0x7fffddd86008, ob=0x7fffeffea608, em=0x0, dataMask=637534729, build_shapekey_layers=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:2156 #8 0x0000555557fc7fb2 in BKE_object_handle_data_update (depsgraph=0x7fffeaee2008, scene=0x7fffddd86008, ob=0x7fffeffea608) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/object_update.c:197 #9 0x0000555557fc88c2 in BKE_object_eval_uber_data (depsgraph=0x7fffeaee2008, scene=0x7fffddd86008, ob=0x7fffeffea608) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/object_update.c:369 #10 0x000055555840a602 in std::__invoke_impl<void, void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*, Scene*&, Object*&> (__f= @0x7fffd2f73ec0: 0x555557fc8812 <BKE_object_eval_uber_data>, __args#0=@0x7fffdaffbd10: 0x7fffeaee2008, __args#1=@0x7fffd2f73ed0: 0x7fffddd86008, __args#2=@0x7fffd2f73ec8: 0x7fffeffea608) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:60 #11 0x00005555584090fb in std::__invoke<void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*, Scene*&, Object*&> (__fn= @0x7fffd2f73ec0: 0x555557fc8812 <BKE_object_eval_uber_data>, __args#0=@0x7fffdaffbd10: 0x7fffeaee2008, __args#1=@0x7fffd2f73ed0: 0x7fffddd86008, __args#2=@0x7fffd2f73ec8: 0x7fffeffea608) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:95 #12 0x00005555584079bd in std::_Bind<void (*(std::_Placeholder<1>, Scene*, Object*))(Depsgraph*, Scene*, Object*)>::__call<void, Depsgraph*&&, 0ul, 1ul, 2ul>(std::tuple<Depsgraph*&&>&&, std::_Index_tuple<0ul, 1ul, 2ul>) (this=0x7fffd2f73ec0, __args=...) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:400 #13 0x0000555558405916 in std::_Bind<void (*(std::_Placeholder<1>, Scene*, Object*))(Depsgraph*, Scene*, Object*)>::operator()<Depsgraph*, void>(Depsgraph*&&) (this=0x7fffd2f73ec0, __args#0=@0x7fffdaffbd10: 0x7fffeaee2008) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:484 #14 0x0000555558402868 in std::_Function_handler<void (Depsgraph*), std::_Bind<void (*(std::_Placeholder<1>, Scene*, Object*))(Depsgraph*, Scene*, Object*)> >::_M_invoke(std::_Any_data const&, Depsgraph*&&) (__functor=..., __args#0=@0x7fffdaffbd10: 0x7fffeaee2008) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:297 #15 0x000055555841c6d3 in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (this=0x7fffd53b7948, __args#0=0x7fffeaee2008) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:687 #16 0x000055555841bcb4 in DEG::deg_task_run_func (pool=0x7fffd36a5008, taskdata=0x7fffd53b78e8, thread_id=4) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:95 #17 0x00005555583d989d in task_scheduler_thread_run (thread_p=0x7fffdddbb0c8) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:442 - 18 0x00007ffff63753c3 in start_thread () from /lib64/libpthread.so.0 - 19 0x00007ffff48ce36f in clone () from /lib64/libc.so.6 ```
Campbell Barton was unassigned by Bastien Montagne 2018-12-14 14:38:02 +01:00
Bastien Montagne self-assigned this 2018-12-14 14:38:02 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by 9d4ab3fe58

This issue was referenced by 9d4ab3fe58ab1fe8658bb006d6c9596fbf498359

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59365
No description provided.