Fix T59365: Blender crashes when I try to open a .blend file.

Broken logic in check for a valid vgroup storage pointer...